Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

18-Mar-2011 Jean-Marie Simonet
# [#24710] Contact language is ignored in frontend. Thanks Christophe.

17-Mar-2011 Christophe Demko
 # [#24954] Module, plugin, and component scriptfile are not copied to final install point (Ian MacLennan)
 # [#25319] Incorrect language keys in error.php of atomic template (bill richardson)
 # [#24987] Contact form not using Jform, makes event not work as expected (Elin Waring, Jean-Marie Simonet)
 # [#25347] Menu alias not respecting "active" (bill richardson)
 # [#25360] Ordering of two modules options are inconsistent (bill richardson, Jozsef Tamas Herczeg)
 # [#25372] Don't use sizeof() (Rouven Weßling)

17-Mar-2011 Jean-Marie Simonet
 # [#25356] Following  tracker 25210. Thanks Christophe.
 # [#25118] Featured articles are reordered when editing one of them. Thanks Ian and Christophe.
 
16-Mar-2011 Mark Dexter
 # Fix typo in 25308 (revision 20969)

16-Mar-2011 Christophe Demko
 # [#25318] Wrong order in Module Latest Users (Marijke Stuivenberg)
 # [#23458] Unused JElement classes in core (Rouven Weßling)
 # [#25228] No javascript form validation after clicking submit button (Piotr Mocko, Rouven Weßling)
 # [#25111] Don't use the javascript pseudo protocol when it isn't necessary (Rouven Weßling)

16-Mar-2011 Jean-Marie Simonet
 # [#25338] *Unused show title parameter for archives menu item
 
15-Mar-2011 Jean-Marie Simonet
 # [#25088] System information > Directory Permissions: List incomplete. Thanks Nikolai and Reinhard.
 # [#25027] module assignment slider gives inaccurate information for modules with "all except". Thanks Elin and Christophe.
 # [#25308] Article Title will not go away, no matter what. Thanks Elin

14-Mar-2011 Jean-Marie Simonet